<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.idplus.shoestoreinventory.screens.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.idplus.shoestoreinventory.screens.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/listingFragment"
        android:name="com.idplus.shoestoreinventory.screens.ListingFragment"
        android:label="@string/shoelist"
        tools:layout="@layout/fragment_listing" >
        <action
            android:id="@+id/action_listingFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpTo="@id/listingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.idplus.shoestoreinventory.screens.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:popUpTo="@id/detailFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.idplus.shoestoreinventory.screens.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions" >
        <action
            android:id="@+id/action_instructionsFragment_to_listingFragment"
            app:destination="@id/listingFragment" />
        <action
            android:id="@+id/action_instructionsFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

</navigation>